# 7drl-2024

./: .gitignore  Cargo.toml  README.md  build.sh
data/: area_info.yaml
resources/: custom_icons.xcf
src/: attack_type.rs  camera.rs  colors.rs  components.rs  consts.rs  direction.rs  gamelog.rs  inventory.rs  main.rs  map.rs  mission_info.rs  monster_part.rs  player.rs  range_type.rs  sys_ai.rs  sys_attack.rs  sys_death.rs  sys_frame_data.rs  sys_mapindex.rs  sys_movement.rs  sys_partbreak.rs  sys_particle.rs  sys_partmove.rs  sys_pickup.rs  sys_projectile.rs  sys_push.rs  sys_spawner.rs  sys_stun.rs  sys_trap_ai.rs  sys_turn.rs  sys_visibility.rs
src/data/: area_info.rs  mod.rs
src/gui/: ability_select.rs  consts.rs  controls.rs  frame_data.rs  inventory.rs  log.rs  map.rs  mod.rs  overworld.rs  sidebar.rs  tooltip.rs
src/map_builder/: bsp.rs  common.rs  drunk_walk.rs  lake_spawner.rs  map_culler.rs  mod.rs  noise_region.rs  overworld.rs  overworld_spawner.rs  random_room.rs  room_corridor.rs  room_drawer.rs  starting_pos.rs
src/quest/: log.rs  mod.rs  quest.rs
src/spawn/: info.rs  melee.rs  mod.rs  ranged.rs  spawner.rs  traps.rs
src/weapon/: lance.rs  mod.rs
